# rust-bitcoinconsensus

./: .gitmodules  CHANGELOG.md  Cargo.toml  build.rs
contrib/: vendor-dogecoin-core.sh
depend/: dogecoin-HEAD-revision.txt
src/: lib.rs
