[package]
name = "dogecoinconsensus"
# The first part is the crate version, the second informational part is the Dogecoin Core version.
version = "0.106.0+1.14.7"
authors = ["Longer Dai <longerfree.dai@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rust-dogecoin/rust-dogecoinconsensus/"
repository = "https://github.com/rust-dogecoin/rust-dogecoinconsensus/"
description = "Dogecoin's libdogecoinconsensus with Rust binding."
keywords = [ "dogecoin", "dogecoinconsensus", "libdogecoinconsensus" ]
readme = "README.md"
exclude = [
        "/depend/dogecoin/.github/**",
        "/depend/dogecoin/.tx/**",
        "/depend/dogecoin/build-aux/**",
        "/depend/dogecoin/contrib/**",
        "/depend/dogecoin/depends/**",
        "/depend/dogecoin/doc/**",
        "/depend/dogecoin/share/**",
        "/depend/dogecoin/test/**",
        "/depend/dogecoin/src/bench/**",
        "/depend/dogecoin/src/config/**",
        "/depend/dogecoin/src/leveldb/**",
        "/depend/dogecoin/src/policy/**",
        "/depend/dogecoin/src/qt/**",
        "/depend/dogecoin/src/rpc/**",
        "/depend/dogecoin/src/support/**",
        "/depend/dogecoin/src/test/**",
        "/depend/dogecoin/src/univalue/**",
        "/depend/dogecoin/src/wallet/**",
        "/depend/dogecoin/src/zmq/**"
        ]
build = "build.rs"
edition = "2021"

[features]
default = ["std"]
std = []
external-secp = []

[dependencies]

[build-dependencies]
cc = "1.0.28"

[dev-dependencies]
rustc-serialize = "0.3"
